# interview-warmup-voice-analysis

./: .gitignore  README.md
testing/my-voice/: file.py  main.py  pyproject.toml  test.py
testing/my-voice/service/: myVoiceAnalysis.py
testing/noise-remover/: file.ipynb  important.txt  requirements.txt
testing/speechR/: pyproject.toml  test.py
testing/wav2vec/: main.py  pyproject.toml  testing.ipynb
