[tool.poetry]
name = "my-voice"
version = "0.1.0"
description = ""
authors = ["Muhammad Umar Anzar <63141196+umar-anzar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
scipy = "^1.12.0"
praat-parselmouth = "^0.4.3"
my-voice-analysis = "^0.7"
praatio = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
